--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chúc mừng ngày nhà giáo Việt Nam</title>
-    <link rel="stylesheet" href="../Thiep2/ThiepChinh.css">
-    <link rel="icon" href="../Thiep2/Img/icon.jpg" sizes="144x144">
+    <link rel="stylesheet" href="./ThiepChinh.css">
+    <link rel="icon" href="./Img/icon.jpg" sizes="144x144">
     <link rel="stylesheet" href="https://use.typekit.net/pld0hig.css">
 </head>
 <body>
     <header>
         <div class="header">
-            <img src="../Thiep2/Img/headerthiepchinh.jpg" alt="">
+            <img src="./Img/headerthiepchinh.jpg" alt="">
         </div>
     </header>
     <div class="container">
         <!-- <div class="navbar">
-            <img src="../Thiep2/navbarleft.jpg" alt="">
+            <img src="./navbarleft.jpg" alt="">
         </div> -->
         <div class="content">
             <div class="content--item " style="background-color: #c7d1db">
                 <div class="content--item-active">
-                    <img src="../Thiep2/Img/thiepmini1.jpg" alt="" >
+                    <img src="./Img/thiepmini1.jpg" alt="" >
                 <p>Những lời chúc của sinh viên dành cho thầy cô</p>
                 </div>
             </div>
@@ -35,18 +35,18 @@
             </div>
             <div class="content--item " style="background-color: #cdb0cc">
                 <div class="content--item-active">
-                    <img src="../Thiep2/Img/thiepmini3.jpg" alt="">
+                    <img src="./Img/thiepmini3.jpg" alt="">
                 <p>Những lời chúc của sinh viên dành cho thầy cô</p>
                 </div>
             </div>  
             <div class="modal1">
                 <div class="modal--content1">
-                    <img src="../Thiep2/Img/modal_cotent.jpg" alt="">
+                    <img src="./Img/modal_cotent.jpg" alt="">
                 </div>
             </div>
             <div class="content--item " style="background-color: #a8c7db">
                 <div class="content--item-active">
-                    <img src="../Thiep2/Img/thiepmini2.jpg" alt="">
+                    <img src="./Img/thiepmini2.jpg" alt="">
                 <p>Những lời chúc của sinh viên dành cho thầy cô</p>
                 </div>
             </div>
@@ -59,7 +59,7 @@
             </div>
         </div>
         <!-- <div class="navbar">
-            <img src="../Thiep2/navbarright.jpg" alt="">
+            <img src="./navbarright.jpg" alt="">
         </div> -->
     </div>
 
@@ -80,32 +80,32 @@
                     <div class="gird_row flexrow">
                     <div class="gird_col_25 flex ">
                         <div class="container_product--link">
-                            <img src="../Thiep2/Img/anhthayco.jpg" alt="" class="container_product_img_item">
+                            <img src="./Img/anhthayco.jpg" alt="" class="container_product_img_item">
                         </div>
                         <div class="container_product--link">
-                            <img src="../Thiep2/Img/anhthayco1.jpg" alt="" class="container_product_img_item"> 
+                            <img src="./Img/anhthayco1.jpg" alt="" class="container_product_img_item"> 
                         </div>
                     </div>
                     <div class="gird_col_25 flex">
                         <div  class="container_product--link ">
-                            <img src="../Thiep2/Img/anhthayco3.jpg" alt="" class="container_product_img_item">
+                            <img src="./Img/anhthayco3.jpg" alt="" class="container_product_img_item">
                         </div>
                         <div  class="container_product--link">
-                            <img src="../Thiep2/Img/anhthay4.jpg" alt="" class="container_product_img_item">
+                            <img src="./Img/anhthay4.jpg" alt="" class="container_product_img_item">
                            
                         </div>
                     </div>
                     <div class="gird_col_25 flex  ">
                         <div class="container_product--link h363px">
-                            <img src="../Thiep2/Img/anhthayco7.jpg" alt="" class="container_product_img_item h363px">                          
+                            <img src="./Img/anhthayco7.jpg" alt="" class="container_product_img_item h363px">                          
                         </div>
                     </div>
                     <div class="gird_col_25 flex">
                         <div class="container_product--link">
-                            <img src="../Thiep2/Img/anhthayco5.jpg" alt="" class="container_product_img_item"> 
+                            <img src="./Img/anhthayco5.jpg" alt="" class="container_product_img_item"> 
                         </div>
                         <div class="container_product--link">
-                            <img src="../Thiep2/Img/anhthayco6.jpg" alt="" class="container_product_img_item">
+                            <img src="./Img/anhthayco6.jpg" alt="" class="container_product_img_item">
                         </div>
                     </div>
                     </div>
@@ -122,14 +122,14 @@
                 <div class="container_contact--list">
                     <div class="container_contact--item">
                         <span class="container_contact--item-detail">
-                            <img src="../Thiep2/Img/cadao.jpg" alt="" class="container_contact--item-img">
+                            <img src="./Img/cadao.jpg" alt="" class="container_contact--item-img">
                             <div class="container_contact--item--content">
                                 <span class="container_contact-item-notify">Con ơi ghi nhớ lời này</span>
                                 <span class="container_contact-item-notify">  Công cha, nghĩa mẹ, công thầy chớ quên</span>
                             </div>
                         </span>
                         <span class="container_contact--item-detail">
-                            <img src="../Thiep2/Img/cadao1.jpg" alt="" class="container_contact--item-img">
+                            <img src="./Img/cadao1.jpg" alt="" class="container_contact--item-img">
                             <div class="container_contact--item--content">
                                 <span class="container_contact-item-notify">Chữ thầy trong cõi người ta</span>
                                 <span class="container_contact-item-notify">  Dặm dài hoa nắng trời xa biển đầy</span>
@@ -138,14 +138,14 @@
                     </div>
                     <div class="container_contact--item">
                         <span class="container_contact--item-detail">
-                            <img src="../Thiep2/Img/cadao2.jpg" alt="" class="container_contact--item-img">
+                            <img src="./Img/cadao2.jpg" alt="" class="container_contact--item-img">
                             <div class="container_contact--item--content">
                                 <span class="container_contact-item-notify">Thời gian dẫu bạc mái đầu</span>
                                 <span class="container_contact-item-notify">Tim trò vẫn tạc đậm câu ơn thầy</span>
                             </div>
                         </span>
                         <span class="container_contact--item-detail">
-                            <img src="../Thiep2/Img/cadao3.jpg" alt="" class="container_contact--item-img">
+                            <img src="./Img/cadao3.jpg" alt="" class="container_contact--item-img">
                             <div class="container_contact--item--content">
                                 <span class="container_contact-item-notify">Gươm vàng rớt xuống Hồ Tây</span>
                                 <span class="container_contact-item-notify"> Ơn cha nghĩa trọng công thầy cũng sâu</span>
@@ -154,7 +154,7 @@
                     </div>
                 </div>    
             </div>
-            <img src="../Thiep2/Img/anhvecadao.jpg" alt="" class="container_popular-tour--img">
+            <img src="./Img/anhvecadao.jpg" alt="" class="container_popular-tour--img">
     </div>
                 
         <div class="footer--logo">
@@ -163,7 +163,7 @@
     </footer>
 </body>
 
-<script src="../Thiep2/thiepchinh.js"></script>
+<script src="./thiepchinh.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" 
 integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" 
 crossorigin="anonymous" 
